<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9AC7F3"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/weather_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"

        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/today_string"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#201C1C"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="100dp"
                android:text="@string/c"
                android:textColor="#201C1C"
                android:textSize="150px"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/city_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="80px"
                android:text="City"
                android:textColor="#201C1C"
                android:textSize="80px"
                android:textStyle="bold"
                tools:text="New York" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/low_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_temp"
                android:textSize="20sp"
                android:textColor="#201C1C"
                android:textStyle="bold"
                android:paddingStart="100dp"
                />

            <TextView
                android:id="@+id/high_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="100dp"
                android:text="@string/high_temp"
                android:textColor="#201C1C"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/wind"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:paddingStart="100dp"
                android:text="@string/wind"
                android:textColor="#546E7A"
                android:textSize="24sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="100dp"
                android:text="@string/water"
                android:textColor="#546E7A"
                android:textSize="24sp"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="center"
                    android:text="Tokyo"
                    app:backgroundTint="#161C1E" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>




</RelativeLayout>